force-app/main/default/objects/Pricebook2/fields/O2P_Business_Brand__c.field-meta.xml
<CustomField>
    <fullName>O2P_Business_Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associates this Price Book (menu) to a Business Brand for multi-brand menu management and routing.</description>
    <inlineHelpText>Select the Business Brand that owns this menu (Price Book). This is required to ensure menus are partitioned correctly by brand.</inlineHelpText>
    <label>Business Brand</label>
    <referenceTo>BusinessBrand</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>