force-app/main/default/objects/Pricebook2/fields/O2P_Effective_End__c.field-meta.xml
<CustomField>
    <fullName>O2P_Effective_End__c</fullName>
    <description>End date when this menu (Price Book) stops being effective for customer ordering. Leave blank for an open-ended menu.</description>
    <inlineHelpText>Optional. Enter the last date this menu should be used. Leave blank if the menu has no planned end date. Must be on or after Effective Start.</inlineHelpText>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>