force-app/main/default/objects/Pricebook2/fields/O2P_Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>O2P_Effective_Start__c</fullName>
    <description>Start date when this menu (Price Book) becomes effective for customer ordering. Used to determine the active menu for a brand.</description>
    <inlineHelpText>Enter the date this menu should start being used. The system selects the brand’s active menu based on today’s date between Effective Start and Effective End.</inlineHelpText>
    <label>Effective Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>