force-app/main/default/objects/Pricebook2/validationRules/O2P_VR_Menu_EffectiveEnd_AfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>O2P_VR_Menu_EffectiveEnd_AfterStart</fullName>
    <active>true</active>
    <description>Effective End must be on or after Effective Start.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(O2P_Effective_End__c)),
  O2P_Effective_End__c &lt; O2P_Effective_Start__c
)</errorConditionFormula>
    <errorDisplayField>O2P_Effective_End__c</errorDisplayField>
    <errorMessage>Effective End must be on or after Effective Start.</errorMessage>
</ValidationRule>